# CamScene

./: CMakeLists.txt  CameraSetup.ui  CarLicensePlateDetector.h  IFrameAnalyzer.h  MotionDetector.h  Region.h  RegionA.h  Resources.qrc  ca.bat  cameraview.cpp  cameraview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygonitem.cpp  polygonitem.h  regioncaption.cpp  regioncaption.h
